--- a/RepairWorkSoftwareWeb/Views/Work/EditWork.cshtml
+++ b/RepairWorkSoftwareWeb/Views/Work/EditWork.cshtml
@@ -27,7 +27,10 @@
     var tech = getUrlParameter('workid');
     if (tech !== undefined) {
         $(function () {
-            $.getJSON("/work/GetWork/?workid=" + tech, null, fillList);
+            $.getJSON("/work/GetWork/?workid=" + tech, null, fillList)
+                .fail(function (xhr, status, error) {
+                    alert(xhr.responseJSON.ExceptionMessage);
+                });
         });
 
         function fillList(material) {
@@ -68,35 +71,21 @@
         <thead>
             <tr><th>Id</th><th>Название материала</th><th>Количество</th><th>Удалить</th><th>Редактировать</th></tr>
         </thead>
-        <tbody id="materialwork-list">
-            @*<tr>
-                <td><input style="border: none;" readonly="readonly" type="text" name="model.WorkMaterials[1].Id" value="1"/></td>
-                <td><input style="border: none;" readonly="readonly" type="text" name="model.WorkMaterials[1].MaterialName" value="Материал #1"/></td>
-                <td><input style="border: none;" readonly="readonly" type="text" name="model.WorkMaterials[1].Count" value="444"/></td>
-                <td><button onclick="deleteRow_Func(this)" type="button">-d</button></td>
-                <td><button onclick="editRow_Func(this)" data-toggle="modal" data-target="#addMaterial_Modal" type="button">-e</button></td>
-            </tr>*@
-        </tbody>
+        <tbody id="materialwork-list"></tbody>
     </table>
     <input id="outForm_Submit" type="submit" value="Сохранить" />
 </form>
 
 <script>
     $("#outForm_Submit").click(function () {
-        var table = document.getElementById("materialwork-table");
         var zeroIndex = 0;
         $('#materialwork-table tr:gt(0)').each(function () {
-            //$(this).find('input').attr('name', "model.WorkMaterials[" + zeroIndex + "].MaterialId")
-            //$(this).find('input').attr('name', "model.WorkMaterials[" + zeroIndex + "].MaterialName")
-            //$(this).find('input').attr('name', "model.WorkMaterials[" + zeroIndex++ + "].Count")
             var this_row = $(this);
             $.trim(this_row.find('td:eq(0)').find('input').attr('name', "model.WorkMaterials[" + zeroIndex + "].MaterialId"));
             $.trim(this_row.find('td:eq(1)').find('input').attr('name', "model.WorkMaterials[" + zeroIndex + "].MaterialName"));
             $.trim(this_row.find('td:eq(2)').find('input').attr('name', "model.WorkMaterials[" + zeroIndex + "].Count"));
             zeroIndex++;
         });
-
-        //$('form#work-form').submit();
     });
 </script>
 
